--- a/rulebooks/rule.yaml
+++ b/rulebooks/rule.yaml
@@ -1,15 +1,14 @@
 ---
-- name: Monitor configuration
-  hosts: all
+- name: Hello Events  
+  hosts: localhost
   sources:
-  - name: webhook
-    ansible.eda.webhook:
-      host: 0.0.0.0
-      port: 5000
+  - ansible.eda.kafka:
+    host: kafka
+      port: 9092
+      topic: orders
   rules:
-  - name: Configuration Changed
-    condition: event.payload.message != ""
+  - name: Say Hello
+    condition: event.target_os == "linux" and event.tracking_id == 345
     action:
-      run_job_template:
-        name: Recover
-        organization: Default
+      debug:
+      msg: “{{ event }}”
