--- a/rulebooks/rule.yaml
+++ b/rulebooks/rule.yaml
@@ -2,8 +2,9 @@
 - name: Hello Events  
   hosts: localhost
   sources:
-  - ansible.eda.kafka:
-    host: kafka
+  - name: kafka
+    ansible.eda.kafka:
+      host: kafka
       port: 9092
       topic: orders
   rules:
