--- a/rulebooks/kafka.yaml
+++ b/rulebooks/kafka.yaml
@@ -1,30 +1,16 @@
 ---
-- name: Monitor configuration
-  hosts: all
-  sources:
-  - name: webhook
-    ansible.eda.webhook:
-      host: 0.0.0.0
-      port: 5000
-  rules:
-  - name: Configuration Changed
-    condition: event.payload.message != ""
-    action:
-      run_job_template:
-        name: Recover
-        organization: Default
-
----
 - name: Hello Events  
   hosts: localhost
   sources:
-  - ansible.eda.kafka:
-    host: kafka
+  - name: kafka
+    ansible.eda.kafka:
+      host: kafka
       port: 9092
       topic: orders
   rules:
   - name: Say Hello
     condition: event.target_os == "linux" and event.tracking_id == 345
     action:
-      debug:
-      msg: “{{ event }}”
+      run_job_template:
+        name: email
+        organization: Default
