--- a/rulebooks/rule.yaml
+++ b/rulebooks/rule.yaml
@@ -1,15 +1,16 @@
 ---
-- name: Monitor configuration
-  hosts: all
+- name: Hello Events  
+  hosts: localhost
   sources:
-  - name: webhook
-    ansible.eda.webhook:
-      host: 0.0.0.0
-      port: 5000
+  - name: kafka
+    ansible.eda.kafka:
+      host: edaworkshop.ansible.test
+      port: 9092
+      topic: eda
   rules:
-  - name: Configuration Changed
+  - name: Send email
     condition: event.payload.message != ""
     action:
       run_job_template:
-        name: Recover
+        name: email
         organization: Default
