--- a/rulebooks/rule.yaml
+++ b/rulebooks/rule.yaml
@@ -1,16 +1,15 @@
 ---
-- name: Hello Events  
-  hosts: localhost
+- name: Monitor configuration
+  hosts: all
   sources:
-  - name: kafka
-    ansible.eda.kafka:
-      host: edaworkshop.ansible.test
-      port: 9092
-      topic: eda
+  - name: webhook
+    ansible.eda.webhook:
+      host: 0.0.0.0
+      port: 5000
   rules:
-  - name: Send email
+  - name: Configuration Changed
     condition: event.payload.message != ""
     action:
       run_job_template:
-        name: email
+        name: Recover
         organization: Default
