--- a/rulebooks/kafka.yaml
+++ b/rulebooks/kafka.yaml
@@ -9,13 +9,7 @@
       topic: eda
   rules:
   - name: Send email
-    condition: event.payload.message != ""
-    action:
-      run_job_template:
-        name: email
-        organization: Default
-  - name: Send email2
-    condition: event.message != ""
+    condition: event.body.eda is defined
     action:
       run_job_template:
         name: email
